Update Langchain4j to 1.3.0